<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_margin="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_doctor_name"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/img_call"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/text_doctor_name"/>
        <TextView
            android:id="@+id/tv_doctor_spesialis"
            android:gravity="center_vertical"
            android:layout_below="@id/tv_doctor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/img_call"
            android:textColor="@android:color/black"
            android:text="@string/text_doctor_spesialis"/>
        <TextView
            android:id="@+id/tv_doctor_address"
            android:gravity="center_vertical"
            android:layout_below="@+id/tv_doctor_spesialis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/img_call"
            android:textColor="@android:color/black"
            android:text="@string/text_doctor_address"/>
        <ImageView
            android:id="@+id/img_call"
            android:src="@drawable/ic_call_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</android.support.v7.widget.CardView>

